test_case/rust-lang_rust/76347_687435463.rs

struct S;
impl S { fn a() {} }
impl S { fn a() {} } //~ ERROR
